--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2068,6 +2068,16 @@ width: 44px;
   float: left;
   margin-right: 30px;
 }
+
+.products-full-width {
+  width: 100%;
+  max-height: 450px;
+}
+
+.products-full-width img {
+  max-width: 100%;
+}
+
 .practice-left-middle-text h3 {
   color: black;
   font-size: 18px;
