--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3440,7 +3440,7 @@ span.progress-bar-tooltip {
 
 
 header.stricky {
-  position: fixed;
+  /*position: fixed;*/
   top: 0;
   left: 0;
   z-index: 99999;
