--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,7 +106,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
   line-height: 24px;
-  color: #878787;
+  color: #6D6D6D;
 }
 body * {
   letter-spacing: .03em;
@@ -226,7 +226,7 @@ p {
   text-transform: uppercase;
 }
 .section-title h1::after {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   content: " ";
   display: inline-block;
   height: 2px;
@@ -247,7 +247,7 @@ p {
   text-transform: uppercase;
 }
 .section-title h2::after {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   content: " ";
   display: inline-block;
   height: 2px;
@@ -474,7 +474,7 @@ markup:
 css:
 
 .call-info {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   display: block;
   overflow: hidden;
   padding: 15px;
@@ -541,13 +541,13 @@ css:
   text-transform: uppercase;
 }
 .civil-text a {
-  color: #b89b5e;
+  color: #069;
   font-size: 13px;
   text-transform: uppercase;
   font-weight: bold;
 }
 .our-law img {
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 .our-law h4 {
   font-family: "Raleway",sans-serif;
@@ -557,7 +557,7 @@ css:
   text-transform: uppercase;
 }
 .our-law a {
-  color: #b89b5e;
+  color: #069;
   font-size: 13px;
   text-transform: uppercase;
   font-weight: bold;
@@ -659,7 +659,7 @@ css:
   color:#8d8d8d;
 }
 .case-evaluation-form button[type="submit"] {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   border: medium none;
   border-radius: 5px;
   color: #ffffff;
@@ -676,10 +676,10 @@ css:
   border: 1px solid #fff;
 }
 .case-evaluation-form input[type="text"]:focus{
-  border:1px solid #b89b5e;
+  border:1px solid #069;
 }
 .case-evaluation-form textarea:focus {
-  border:1px solid #b89b5e;
+  border:1px solid #069;
 }
 .case-evaluation-image img {
   float: left;
@@ -695,7 +695,7 @@ css:
   position: absolute;
   top: 0;
   left: 200%;
-  background: #B89B5E;
+  background: #069;
   display: block;
   opacity: .65;
   transition: all .3s ease;
@@ -773,7 +773,7 @@ css:
   transition: all .5s ease;
 }
 .single-attorney:hover .attorney-name {
-  background: #B89B5E;
+  background: #069;
 }
 .single-attorney:hover .attorney-name h5 {
   color: #fff;
@@ -826,7 +826,7 @@ css:
 }
 .lawyer-text p {
   font-family: "Open Sans",sans-serif;
-  color: #b89b5e;
+  color: #069;
   font-weight: 600;
   line-height: 20px;
   margin: 0;
@@ -896,7 +896,7 @@ css:
   margin-top: 8px;
 }
 .download-button a {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   color: #ffffff;
   display: inline-block;
   font-family: "Raleway",sans-serif;
@@ -904,7 +904,7 @@ css:
   font-weight: 700;
   padding: 9px 30px;
   text-transform: uppercase;
-  border: 1px solid #b89b5e;
+  border: 1px solid #069;
 }
 .download-button a:hover {
   background: #363636;
@@ -957,7 +957,7 @@ css:
   font-family: "Open Sans",sans-serif;
 }
 .testimonial-author h4 {
-  color: #b89b5e;
+  color: #069;
   font-size: 16px;
   font-style: italic;
   font-family: "Open Sans",sans-serif;
@@ -968,7 +968,7 @@ css:
   position:absolute;
   left:-60px;
   top:120px;
-  color:#b89b5e;
+  color:#069;
   font-size:40px;
 }
 /*End Testimonial Area Css*/
@@ -1019,7 +1019,7 @@ css:
   width: 100%;
 }
 .published-date {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   height: 63px;
   text-align: center;
   padding-top: 5px;
@@ -1061,7 +1061,7 @@ css:
   padding-right: 13px;
 }
 .news-info ul li a:hover {
-  color: #B89B5E;
+  color: #069;
 }
 .news-info ul li.admin-border-leftnone a{
   border-left:none;
@@ -1087,7 +1087,7 @@ css:
   font-family: 'PT Serif', sans-serif;
 }
 .latest-news-text .meta li a .fa {
-  color: #B89B5E;
+  color: #069;
 }
 .latest-news-text h4 {
   color: #282c3d;
@@ -1204,7 +1204,7 @@ css:
 }
 
 .get-free-consultation-button a:hover {
-  background: #B89B5E;
+  background: #069;
   color: #1f1f1f;
   border-color: #1F1F1F;
 }
@@ -1228,7 +1228,7 @@ css:
   font-family: "Open Sans",sans-serif;
 }
 .footer-read-more a {
-  color: #b89b5e;
+  color: #069;
   font-size: 13px;
   font-weight: 600;
   font-family: "Open Sans",sans-serif;
@@ -1248,8 +1248,8 @@ css:
   width: 30px;
 }
 .widget-social-links a i.mysocial_style:hover{
-/*  border:1px solid #b89b5e;
-  color:#b89b5e;*/
+/*  border:1px solid #069;
+  color:#069;*/
 }
 
 .single-footer-widget h3 {
@@ -1412,7 +1412,7 @@ css:
   color: #fff;
 }
 .single-featured-item:hover .featured-text h4 {
-  color: #b89b5e;
+  color: #069;
 }
 /*End Featured service area 2 css */
 
@@ -1574,7 +1574,7 @@ color: #fff;
 }
 
 .attorney-title-name {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   margin: 25px 20px 0;
   padding-bottom: 4px;
   padding-top: 11px;
@@ -1669,7 +1669,7 @@ color: #fff;
   text-transform: uppercase;
 }
 .practice-v1-tabmenu ul.mytab li.active a{
-  color:#b89b5e;
+  color:#069;
 }
 /*End practice v1 tabmenu area css*/
 
@@ -1725,7 +1725,7 @@ color: #fff;
   padding-top: 22px;
 }
 .contact-us-box {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   margin-right: 30px;
   margin-top: 40px;
   padding: 27px 0;
@@ -1783,7 +1783,7 @@ color: #fff;
   background:#3b3946;
 }
 .choose-single-item:hover.choose-single-item h4{
-  color:#b89b5e;
+  color:#069;
 }
 .choose-single-item:hover.choose-single-item p{
   color:#b2b2b3;
@@ -1827,7 +1827,7 @@ color: #fff;
   text-transform: uppercase;
 }
 .practice-v2-single-item-title h4::after {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   content: "";
   display: inline-block;
   height: 2px;
@@ -1841,7 +1841,7 @@ color: #fff;
   line-height:26px;
 }
 .practice-v2-single-item-text a {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   color: #ffffff;
   display: inline-block;
   font-family: "Open Sans",sans-serif;
@@ -1925,7 +1925,7 @@ color: #fff;
   padding-left: 16px;
 }
 .practice-v3-paginat ul.pagination li.active a{
-  background: #b89b5e;
+  background: #069;
   color:#ffffff;
   border:none;
 }
@@ -1956,7 +1956,7 @@ margin-bottom: 0;
 text-transform: uppercase;
 }
 .practice-v4-sidebar-title h3::after {
-background: #b89b5e none repeat scroll 0 0;
+background: #069 none repeat scroll 0 0;
 content: "";
 display: inline-block;
 height: 1px;
@@ -2003,7 +2003,7 @@ width: 44px;
   font-style:italic;
 }
 .right-content-contact-box a {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   color: #1f1f1f;
   display: inline-block;
   font-family: "Raleway",sans-serif;
@@ -2057,11 +2057,12 @@ width: 44px;
 }
 .single-law-box:hover,
 .single-law-box.active {
-  border-left-color: #b89b5e;
+  border-left-color: #069;
+  background: #069;
 }
 .single-law-box:hover a,
 .single-law-box.active a {
-  color:#b89b5e;
+  color: white;
 }
 
 .practice-left-top-left-img {
@@ -2124,7 +2125,7 @@ width: 44px;
   margin-bottom: 30px;
 }
 .blog-post-date {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   float: left;
   height: 75px;
   margin-right: 30px;
@@ -2223,7 +2224,7 @@ width: 44px;
   margin-bottom: 22px;
 }
 .sidebar-widget-title h3::after {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   content: "";
   display: inline-block;
   height: 1px;
@@ -2340,10 +2341,10 @@ width: 44px;
     border: medium none;
 }
 .sidebar-widget-category ul li a:hover {
-    color: #b89b5e;
+    color: #069;
 }
 .sidebar-widget-category ul li a:hover::before {
-    color: #b89b5e;
+    color: #069;
 }
 /*End category  widget items */
 
@@ -2385,7 +2386,7 @@ width: 44px;
 }
 .sidebar-tags-cloude ul li a:hover{
   background:#3b3946;
-  color:#b89b5e;
+  color:#069;
   border:1px solid #ffffff;
 }
 /*End Tag cloude  widget */
@@ -2637,7 +2638,7 @@ width: 44px;
 .john-michila-text p {
 }
 .john-michila-text h4 {
-  color: #b89b5e;
+  color: #069;
   float: right;
   font-family: "Open Sans",sans-serif;
   font-size: 16px;
@@ -2739,7 +2740,7 @@ width: 44px;
   line-height: 25px;
 }
 .comment-title h4::after {
-    background: #b89b5e none repeat scroll 0 0;
+    background: #069 none repeat scroll 0 0;
     content: "";
     display: inline-block;
     height: 1px;
@@ -2771,7 +2772,7 @@ width: 44px;
   text-transform: uppercase;
 }
 .comment-text h5 span {
-    color: #b89b5e;
+    color: #069;
     font-size: 13px;
     padding-left: 5px;
     text-transform: uppercase;
@@ -2784,7 +2785,7 @@ width: 44px;
   margin: 0;
 }
 .comment-text a {
-  color: #b89b5e;
+  color: #069;
   font-size: 12px;
   text-transform: uppercase;
   font-family: "Open Sans",sans-serif;
@@ -2840,7 +2841,7 @@ width: 44px;
 }
 .comment-form form button {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #b89b5e;
+  border: 1px solid #069;
   color: #b5985a;
   font-family: "PT Serif",sans-serif;
   font-size: 16px;
@@ -2869,7 +2870,7 @@ width: 44px;
   line-height: 42px;
 }
 .comment-form form button .fa {
-  color: #B89B5E;
+  color: #069;
   font-size: 14px;
   border-left: 1px solid #424242;
   padding-left: 15px;
@@ -2881,18 +2882,18 @@ width: 44px;
 }
 
 .comment-form form button:hover {
-  background: #B89B5E;
+  background: #069;
   color: #1f1f1f;
 }
 
 .comment-form form input.name:focus{
-  border:1px solid #b89b5e;
+  border:1px solid #069;
 }
 .comment-form form input.email:focus{
-  border:1px solid #b89b5e;
+  border:1px solid #069;
 }
 .comment-form form textarea.comment:focus{
-  border:1px solid #b89b5e;
+  border:1px solid #069;
 }
 /*End Meet Attorneys Comment form */
 /*End======================================================blog-details.html page css==============================*/
@@ -2977,7 +2978,7 @@ width: 44px;
   line-height: 42px;
 }
 .contact-form form button[type="submit"] .fa {
-  color: #B89B5E;
+  color: #069;
   font-size: 14px;
   border-left: 1px solid #424242;
   padding-left: 15px;
@@ -2989,7 +2990,7 @@ width: 44px;
 }
 
 .contact-form form button[type="submit"]:hover {
-  background: #B89B5E;
+  background: #069;
   color: #1f1f1f;
 }
 
@@ -3182,7 +3183,7 @@ width: 44px;
   text-transform: uppercase;
 }
 .single-attorney-title h3::after {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   content: "";
   display: inline-block;
   height: 2px;
@@ -3206,7 +3207,7 @@ width: 44px;
   line-height: 35px;
 }
 a.appintment-button {
-  background: #b89b5e none repeat scroll 0 0;
+  background: #069 none repeat scroll 0 0;
   bottom: -46px;
   color: #ffffff;
   display: block;
@@ -3258,7 +3259,7 @@ a.appintment-button {
   overflow: hidden;
 }
 .education-list-left h1 {
-  color: #b89b5e;
+  color: #069;
   font-size: 35px;
   font-style:italic;
   font-family: "PT Serif",sans-serif;
@@ -3304,7 +3305,7 @@ a.appintment-button {
   background-image:none;
 }
 .progress-bar-primary {
-  background-color: #b89b5e;
+  background-color: #069;
 }
 .progress-bar {
   border-radius: 10px 0 0 10px;
@@ -3411,7 +3412,7 @@ span.progress-bar-tooltip {
   line-height: 42px;
 }
 .leave-comment-form button[type="submit"] .fa {
-  color: #B89B5E;
+  color: #069;
   font-size: 14px;
   border-left: 1px solid #424242;
   padding-left: 15px;
@@ -3423,7 +3424,7 @@ span.progress-bar-tooltip {
 }
 
 .leave-comment-form button[type="submit"]:hover {
-  background: #B89B5E;
+  background: #069;
   color: #1f1f1f;
 }
 
@@ -3449,7 +3450,8 @@ header.stricky {
 }
 header.stricky-fixed {
   background: white;
-  border-bottom: 0;
+  border-bottom: 2px solid;
+  border-color: #069;
 }
 header.stricky-fixed .logo {
   line-height: 70px;
@@ -3509,7 +3511,7 @@ header .search-box input {
 }
 header .search-box button {
   width: 40px;
-  background: #B89B5E;
+  background: #069;
   border: none;
   outline: none;
   height: 40px;
@@ -3567,15 +3569,15 @@ header .search-box button {
 
 .mainmenu .nav-holder > ul > li.dropdown:hover > a:after,
 .mainmenu .nav-holder > ul > li.dropdown.current > a:after {
-  /*color: #B89B5E;*/
+  /*color: #069;*/
 }
 .home-header .mainmenu .nav-holder > ul > li.dropdown:hover > a:after,
 .home-header .mainmenu .nav-holder > ul > li.dropdown.current > a:after {
-  color: #B89B5E;
+  color: #069;
 }
 .stricky-fixed .mainmenu .nav-holder > ul > li.dropdown:hover > a:after,
 .stricky-fixed .mainmenu .nav-holder > ul > li.dropdown.current > a:after {
-  /*color: #B89B5E;*/
+  /*color: #069;*/
 }
 .mainmenu .nav-holder > ul > li > ul {
   position: absolute;
@@ -3649,7 +3651,7 @@ header .search-box button {
   right: 200%;
 }
 .mainmenu .nav-holder > ul > li > ul > li > ul > li > a:hover {
-  color: #B89B5E;
+  color: #069;
 }
 .mainmenu .nav-holder > ul > li > ul.right-align {
   left: auto;
@@ -3695,7 +3697,7 @@ header .search-box button {
   -o-transition: all 0.5s ease;
 }
 .mainmenu .nav-holder > ul > li > ul > li > ul > li:hover:before {
-  color: #B89B5E;
+  color: #069;
 }
 .mainmenu .nav-holder > ul > li > ul > li > ul > li > a {
   color: #828282;
@@ -3816,7 +3818,7 @@ header .search-box button {
   font-weight: 800;
 }
 #banner .slider-2 .caption-1 h1{
-  color: #B89B5E;
+  color: #069;
 }
 #banner .caption-2 h1{
   color: #ffffff;
@@ -3963,7 +3965,7 @@ header .search-box button {
   z-index: 9999;
 }
 .call-to-action-area .container {
-  background: #B89B5E;
+  background: #069;
   padding: 18px 0px;
 }
 .call-to-action-area .dtc {
@@ -4025,7 +4027,7 @@ header .search-box button {
   background: #C6A561;
 }
 #our-attorneys-area.home .single-attorney:hover .attorney-name {
-  background: #B89B5E;
+  background: #069;
 }
 #our-attorneys-area.home .attorney-name h5 {
   color: #fff;
@@ -4042,8 +4044,9 @@ header .search-box button {
 }
 
 .btn-d:hover {
-  color: #ff7302 !important;
-  border-color:#ff7302 !important;
+  color: white !important;
+  border-color: #069 !important;
+  background: #069;
 }
 
 .white {
