--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4070,9 +4070,13 @@ header .search-box button {
   color: #069;
 }
 
+.grid-container {
+  padding: 12px;
+}
+
 .by-color-grid {
-  margin: 0;
   display: inline-block;
-  width: 11.8%;
+  width: 100%;
+  height: 100%;
   height: 120px;
 }
