--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,7 +106,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
   line-height: 24px;
-  color: #6D6D6D;
+  color: #333;
 }
 body * {
   letter-spacing: .03em;
