--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4120,4 +4120,12 @@ header .search-box button {
   #practice-v5-area {
     padding: 0;
   }
+
+  .by-color-grid {
+    height: 60px;
+  }
+
+  .colour-charts li div {
+    height: 60px !important;
+  }
 }
